--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <p>
     <mat-toolbar color="primary">
-        <button mat-raised-button color="primary" routerLink="/"><span style="color: red">Dummy</span>
+        <button mat-raised-button color="primary" routerLink="/"><span style="color: red">ummy</span>
             Enterprises</button>
         <span class="spacer"></span>
         <span class="large" *ngIf="!isSmallScreen">
